--- a/css/resume.css
+++ b/css/resume.css
@@ -58,7 +58,7 @@ p.lead {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #4169e1;
   color: #fff !important;
   border-radius: 100%;
   text-align: center;
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #214cce;
 }
 
 .dev-icons {
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: #214cce;
 }
 
 @media (min-width: 992px) {
@@ -176,17 +176,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #214cce !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #214cce !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #214cce;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #6d8ce8;
 }
